# onnxInference

./: .gitignore  README.md  onnx_helper.py  onnx_transformer.py  pyproject.toml  run_models.py
data/stableDiffusion/: download_sd.ps1
data/stableDiffusion/video/logs/: int_norm.csv  sd_pipeline.csv
llama2/: example_chat_completion.py
llama2/llama/: generation.py  model.py
llama2/llama2-7b-chat/: tokenizer_checklist.chk
llama2/llama2-7b-chat/llama-2-7b-chat/: checklist.chk  params.json
onnxHelpers/: onnxBenchmark.py  onnxTransformer.py  onnx_helper.py  onnx_transformer.py  run_models.py
results/aiRecall/snapshots/: database_embedding.npz
results/onnxProfile/analysis/: sdxlt_unet_analysis.tex
results/onnxProfile/logs/: llama3_8b_fp16_promptPhase_grouped_summary.csv  llama3_8b_fp16_promptPhase_summary.csv  llama3_8b_fp16_tokenPhase_grouped_summary.csv  llama3_8b_fp16_tokenPhase_summary.csv  sd_unet_summary.csv  sdt_unet_grouped_summary.csv  sdxlt_unet_grouped_summary.csv  sdxlt_unet_summary.csv  sdxlt_unet_summary_analysis.csv  sdxlt_unet_summary_analysis_int.csv  tinyllama_grouped_summary.csv  tinyllama_summary.csv
results/onnxProfile/logs/llama3_8b_fp16/: llama3_8b_fp16_decode0Phase_grouped_memory_optimized_summary.csv  llama3_8b_fp16_decode0Phase_grouped_summary.csv  llama3_8b_fp16_decode0Phase_memory_optimized_grouped_summary.csv  llama3_8b_fp16_decode0Phase_memory_optimized_summary.csv  llama3_8b_fp16_decode0Phase_summary.csv  llama3_8b_fp16_decodePhase_grouped_memory_optimized_summary.csv  llama3_8b_fp16_decodePhase_grouped_summary.csv  llama3_8b_fp16_decodePhase_summary.csv  llama3_8b_fp16_decodenPhase_grouped_summary.csv  (+10 more)
results/stableDiffusion/sd_results/: int_norm.csv  sd_pipeline.csv
runs/aiRecall/: run_Recall.py
runs/stableDiffusion/: runSD.py  run_SD.py  run_msft_SD.py
scripts/onnxBenchmark/: run_models.py
scripts/onnxProfile/: onnx_llama_profiling.py  onnx_llm_profiling.py  onnx_profiling.py  onnx_profiling_2.py  onnx_profiling_analysis.py
src/onnxInference/: __init__.py
src/onnxInference/aiRecall/: aiRecallPipeline.py
src/onnxInference/llama2/: README.md  llama2.py
src/onnxInference/onnxHelpers/: __init__.py  onnxInference.c  onnxInference.h  onnxInference.py  test_onnxInference.c  test_onnx_models.py
src/onnxInference/stableDiffusion/: sdPipeline.py
src/onnxInsights/: __init__.py
src/onnxInsights/aiRecall/: __init__.py  aiMSFTRecall.py  aiRecallPipeline.py
src/onnxInsights/llama2/: example_chat_completion.py  inference.py
src/onnxInsights/onnxHelpers/: README.md  __init__.py  cacheView.py  inferenceHelper.py  memoryView.py  onnxBenchmark.py  onnxInference.py  onnxOPS.py  onnxProfiler.py  onnxTransformer.py  run_models.py
src/onnxInsights/sepFormer/: sepFormer.py
src/onnxInsights/stableDiffusion/: __init__.py  sdHelper.py  sdMSFTPipeline.py  sdPipeline.py
src/onnxInsights/tinyStories/: babyDecoder.py  babyLlama.py  onnx_helper.py  trainTokenizer.py  trainW.py
stable-diffusion/: download_sd.ps1  helper.py  inference_onnxruntime.py  pipeline.py  sdPipeline.py
stable-diffusion/sd_turbo_results/: int_norm.csv  sd_pipeline.csv
stable-diffusion/sd_v2_results/: int_norm.csv
stable-diffusion/sdxl_turbo_results/: sd_pipeline.csv
stableDiffusion/: env.yaml  onnxruntimeInference.py  sdHelper.py  sdPipeline.py
stableDiffusion/sd_turbo_results/: Thumbs.db  int_norm.csv  sd_pipeline.csv
stableDiffusion/sd_v2_results/: sd_pipeline.csv
stableDiffusion/sdxl_turbo_results/: int_norm.csv
tests/stableDiffusion/: test_SD.py
tinyStories/: test.py
weights/stableDiffusion/sd_turbo_numpy/: linear1Bias.npy  linear1Weight.npy  linear2Bias.npy
(+13 files in other folders)
