# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onnxInsights"
dynamic = ["version"]
authors = [
    {name = "Shamith Achanta", email = "achantashamith007@gmail.com"},
]
description = "Getting to know more about onnx models: insights into their performance and bottlenecks for practical applications"
keywords = ["onnxInsights", "onnx", "onnxruntime", "static profiling", "onnx profiling", "stable diffusion pipeline", "ai recall pipeline"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">= 3.9"
dependencies = [
    "pip",
    "tzdata",
    "wheel",
    "pytest",
    "cmake",
    "numpy",
    "onnx",
    "onnxruntime",
    "torch",
    "matplotlib",
    "pandas"
]

[project.optional-dependencies]
pipelines = [
    "optimum",
    "diffusers",
    "scipy",
    "accelerate",
    "tqdm",
    "psutil",
    "opencv-python",
    "pyautogui",
    "imagehash",
    "keyboard"
]

[tool.hatch.version]
path = "src/onnxInsights/__init__.py"

[project.urls]
repository = "https://github.com/shamith2/onnxInsights"
